# bank-statement-import

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md  requirements.txt
.github/workflows/: test.yml
account_statement_base/: __manifest__.py
account_statement_base/views/: account_bank_statement.xml  account_bank_statement_line.xml
account_statement_import_base/: README.rst  __init__.py  __manifest__.py
account_statement_import_base/i18n/: da.po
account_statement_import_base/models/: __init__.py
account_statement_import_camt/: __manifest__.py
account_statement_import_camt/models/: __init__.py  parser.py
account_statement_import_camt/tests/: __init__.py  test_import_bank_statement.py
account_statement_import_camt54/: __manifest__.py
account_statement_import_camt54/models/: __init__.py  account_statement_import.py  parser.py
account_statement_import_file/: README.rst  __init__.py  __manifest__.py
account_statement_import_file/i18n/: es.po  (+2 more)
account_statement_import_file_reconcile_oca/: README.rst
account_statement_import_move_line/: README.rst
account_statement_import_online/: README.rst
account_statement_import_online_gocardless/: README.rst
account_statement_import_online_paypal/: README.rst
account_statement_import_online_plaid/: README.rst  __manifest__.py
account_statement_import_online_ponto/: README.rst
account_statement_import_online_stripe/: README.rst
account_statement_import_paypal/: README.rst
account_statement_import_sheet_file/: README.rst
setup/_metapackage/: pyproject.toml
(+44 files in other folders)
