[project]
name = "odoo-addons-oca-bank-statement-import"
version = "18.0.20251015.0"
dependencies = [
    "odoo-addon-account_statement_import_base==18.0.*",
    "odoo-addon-account_statement_import_camt54==18.0.*",
    "odoo-addon-account_statement_import_camt==18.0.*",
    "odoo-addon-account_statement_import_file==18.0.*",
    "odoo-addon-account_statement_import_file_reconcile_oca==18.0.*",
    "odoo-addon-account_statement_import_move_line==18.0.*",
    "odoo-addon-account_statement_import_ofx==18.0.*",
    "odoo-addon-account_statement_import_online==18.0.*",
    "odoo-addon-account_statement_import_online_gocardless==18.0.*",
    "odoo-addon-account_statement_import_online_paypal==18.0.*",
    "odoo-addon-account_statement_import_online_ponto==18.0.*",
    "odoo-addon-account_statement_import_online_stripe==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
